--- a/meme-generator.css
+++ b/meme-generator.css
@@ -1,3 +1,43 @@
 #meme-canvas {
     width: 300px;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serief;
+    background: #34495e;
+}
+
+.box {
+    width: 300px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #191919;
+    text-align: center;
+}
+
+p {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #3498db;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+
+}
+
+div .divStyle {
+    text-align: center;
+    border: 0;
+    padding-top: 20px;
+}
